--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
-body{
-    background-color:peru;
+body {
+  background-color: #ecf0f1;
 }
 
-h1{ color: white}
+h1 {
+  color: #34495e;
+}
 
-
-#title{
-    
+.cliked {
+  color: #7f8c8d;
 }
