--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #ecf0f1;
+  background-color: #2c3e50;
 }
 
 h1 {
-  color: #34495e;
+  color: #ecf0f1;
 }
 
 .btn {
@@ -11,7 +11,7 @@ h1 {
 }
 
 body {
-  color: #34495e;
+  color: #ecf0f1;
 }
 
 .cliked {
@@ -26,4 +26,23 @@ body {
 
 .showing {
   display: block; /* 새로운 라인에 요소가 배치되며 화면 크기의 전체 가로폭을 영역으로 차지 */
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  widows: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 0.5s linear;
 }
